<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F7F7F7"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/imageView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="wrap_content"
        android:background="@drawable/ic_input_num_bg"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/subscribeHeading"
        android:layout_width="0dp"
        android:text="@string/fui_verify_phone_number"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginStart="24dp"
        android:textColor="#696969"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toTopOf="@id/imageView"
        app:layout_constraintStart_toStartOf="@id/imageView"
        app:layout_constraintEnd_toEndOf="@id/imageView"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/enternumberheading"
        android:layout_width="0dp"
        android:text="@string/enter_four_digit_otp_sent_on_your_device"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@id/subscribeHeading"
        app:layout_constraintTop_toBottomOf="@id/subscribeHeading"
        app:layout_constraintStart_toStartOf="@id/subscribeHeading"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="0dp"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        app:layout_constraintEnd_toEndOf="@id/enternumberheading"
        app:layout_constraintStart_toStartOf="@id/enternumberheading"
        app:layout_constraintTop_toBottomOf="@id/enternumberheading"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_wating_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:gravity="center"
            android:text="@string/waiting_to_automatically_detect_an_sms_sent_to_6285814993643_wrong_number" />

        <EditText
            android:id="@+id/et_verification_code"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:backgroundTint="@color/colorPrimaryDark"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_contoh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_6_digit_code" />

    </LinearLayout>

    <TextView
        android:id="@+id/tv_resend_sms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/linear"
        app:layout_constraintStart_toStartOf="@id/linear"
        android:text="@string/haven_t_received_an_sms_resend" />

    <TextView
        android:id="@+id/tv_countdown_sms"
        android:layout_width="wrap_content"
        android:visibility="invisible"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/tv_resend_sms"
        app:layout_constraintStart_toEndOf="@id/tv_resend_sms"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_resend_sms"
        android:layout_alignParentEnd="true" />

    <TextView
        android:id="@+id/bt_next_main"
        app:layout_constraintStart_toStartOf="@id/subscribeHeading"
        app:layout_constraintEnd_toEndOf="@id/subscribeHeading"
        app:layout_constraintTop_toBottomOf="@id/linear"
        app:layout_constraintBottom_toBottomOf="@id/imageView"
        android:layout_width="0dp"
        android:background="@drawable/ic_button_bg"
        android:text="@string/enter"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:gravity="center"
        android:layout_height="wrap_content"/>
</androidx.constraintlayout.widget.ConstraintLayout>