<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E6E5E5"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/imageView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="wrap_content"
        android:background="@drawable/ic_input_num_bg"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/subscribeHeading"
        android:layout_width="0dp"
        android:text="@string/subscribe"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginStart="24dp"
        android:textColor="#696969"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toTopOf="@id/imageView"
        app:layout_constraintStart_toStartOf="@id/imageView"
        app:layout_constraintEnd_toEndOf="@id/imageView"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/enternumberheading"
        android:layout_width="0dp"
        android:text="@string/please_enter_your_number"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@id/subscribeHeading"
        app:layout_constraintTop_toBottomOf="@id/subscribeHeading"
        app:layout_constraintStart_toStartOf="@id/subscribeHeading"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintEnd_toEndOf="@id/enternumberheading"
        app:layout_constraintStart_toStartOf="@id/enternumberheading"
        app:layout_constraintTop_toBottomOf="@id/enternumberheading"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/et_country_code"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".3"
            android:backgroundTint="@color/colorPrimaryDark"
            android:drawableLeft="@drawable/ic_add_black_24dp"
            android:gravity="center"
            android:textSize="18sp"
            android:inputType="number"
            android:text="92" />

        <EditText
            android:id="@+id/et_phone_number"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".7"
            android:backgroundTint="@color/colorPrimaryDark"
            android:hint="300XXXXXXXX"
            android:inputType="phone" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textSize="12sp"
        app:layout_constraintTop_toBottomOf="@id/linear"
        app:layout_constraintStart_toStartOf="@id/linear"
        app:layout_constraintEnd_toEndOf="@id/linear"
        android:text="@string/carrier_sms_charges_may_apply" />


    <TextView
        android:id="@+id/bt_next_input_number"
        app:layout_constraintStart_toStartOf="@id/subscribeHeading"
        app:layout_constraintEnd_toEndOf="@id/subscribeHeading"
        app:layout_constraintTop_toBottomOf="@id/linear"
        app:layout_constraintBottom_toBottomOf="@id/imageView"
        android:layout_width="0dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/ic_button_bg"
        android:text="@string/enter"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:gravity="center"
        android:layout_height="wrap_content"/>
</androidx.constraintlayout.widget.ConstraintLayout>