<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp">

    <TextView
        android:id="@+id/day"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="4dp"
        android:text="@string/monday"
        android:textColor="@color/black"
        app:layout_constraintEnd_toStartOf="@id/weatherIcon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/weatherIcon"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:src="@drawable/ic_sunny"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="@id/day"
        app:layout_constraintEnd_toStartOf="@id/highTemp"
        app:layout_constraintStart_toEndOf="@id/day"
        app:layout_constraintTop_toTopOf="@id/day"
        app:tint="#D6D5D5" />

    <TextView
        android:id="@+id/highTemp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_32_degree"
        android:textColor="@color/black"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/day"
        app:layout_constraintEnd_toStartOf="@id/slash"
        app:layout_constraintStart_toEndOf="@id/weatherIcon"
        app:layout_constraintTop_toTopOf="@id/day" />

    <TextView
        android:id="@+id/slash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=" / "
        android:textStyle="bold"
        android:textColor="@color/grey"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@id/day"
        app:layout_constraintEnd_toStartOf="@id/lowTemp"
        app:layout_constraintStart_toEndOf="@id/highTemp"
        app:layout_constraintTop_toTopOf="@id/day" />

    <TextView
        android:id="@+id/lowTemp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/_15_degree"
        android:textColor="@color/grey"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/day"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/slash"
        app:layout_constraintTop_toTopOf="@id/day" />


    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="8dp"
        android:background="#c0c0c0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/day" />


</androidx.constraintlayout.widget.ConstraintLayout>